# Epitech_projects_TEK3

CPP_rtype_2018/: CMakeLists.txt  Makefile  build.sh  conanfile.txt  make.sh  r-type_client  r-type_server
CPP_rtype_2018/Client/: Makefile
CPP_rtype_2018/Client/include/: Bomb.hpp  Bullet.hpp  Client.hpp  EnnemySpaceShip.hpp  Explosion.hpp  IMutex.hpp  NetworkManager.hpp  Player.hpp  ScopedLock.hpp  SpaceShip.hpp
CPP_rtype_2018/Client/src/: Bullet.cpp  Client.cpp  Energy.cpp  EnnemySpaceShip.cpp  Explosion.cpp  Id.cpp  Mutex.cpp  NetworkManager.cpp  Player.cpp  ScopedLock.cpp  SpaceShip.cpp  ZigZagEnnemy.cpp  main.cpp
CPP_rtype_2018/Game/: Makefile
CPP_rtype_2018/Game/include/: Bomb.hpp  Bullet.hpp  Camp.hpp  CooldownReduc.hpp  Energy.hpp  EnnemySpaceShip.hpp  Explosion.hpp  MonsterGenerator.hpp  Player.hpp  ScrollingCamera.hpp  ShootingEnnemy.hpp  SpaceShip.hpp  ZigZagEnnemy.hpp
CPP_rtype_2018/Game/src/: Bomb.cpp  Bullet.cpp  CooldownReduc.cpp  Energy.cpp  EnnemySpaceShip.cpp  Explosion.cpp  MonsterGenerator.cpp  Player.cpp  ScrollingCamera.cpp  ShootingEnnemy.cpp  SpaceShip.cpp  ZigZagEnnemy.cpp  main.cpp
CPP_rtype_2018/OtterEngine/include/: Hitbox.hpp  Object.hpp  OtterEngine.hpp  TimeManager.hpp  View.hpp  WindowManager.hpp
CPP_rtype_2018/OtterEngine/src/: Hitbox.cpp  InputManager.cpp  Object.cpp  OtterEngine.cpp  TimeManager.cpp  View.cpp  WindowManager.cpp
CPP_rtype_2018/Server/: Makefile
CPP_rtype_2018/Server/include/: Bullet.hpp  ClientServer.hpp  Energy.hpp  Game.hpp  Id.hpp  Lobby.hpp  Logger.hpp  Mutex.hpp  NetworkManagerServer.hpp  Parser.hpp  SafeQueue.hpp  Server.hpp  ZigZagEnnemy.hpp
CPP_rtype_2018/Server/src/: Bomb.cpp  Bullet.cpp  ClientServer.cpp  Energy.cpp  EnnemySpaceShip.cpp  Game.cpp  Lobby.cpp  Logger.cpp  NetworkManagerServer.cpp  Parser.cpp  Player.cpp  SafeQueue.cpp  Server.cpp  SpaceShip.cpp  ZigZagEnnemy.cpp  main.cpp
CPP_rtype_2018/doc/: protocole.txt
CPP_rtype_2018/doc/html/: annotated.html  classes.html  dir_1500fc319722fb6ca9f41cecf7a93f5a.html  dir_189b1b19b0aeac41369f24237dc2e5ef.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_2682629b7c2a4112597a6f09a6890c73.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_30ff900869959b17197a70705703ad2d.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_71db3c9ac669ad0e48d6cd88f7e1e924.html  doxygen.css  files.html  (+62 more)
PocketDungeon/: .gitignore  CMakeLists.txt  README.md  build.sh  howToGitHub.txt  log  make.sh
PocketDungeon/cmake_modules/: FindSFML.cmake
PocketDungeon/documentation/: GDD CONSOLE.docx  Game Designe Document.docx  HUB Proposal.docx
PocketDungeon/include/: Camera.h  IA.hpp  Player.hpp  Theme.hpp  TypeTable.hpp  Types.hpp  macros.hpp
PocketDungeon/ressources/: typeMultiplier.dont_touch
PocketDungeon/src/: Camera.cpp  IA.cpp  Player.cpp  TypeTable.cpp  main.cpp
(+689 files in other folders)
